Optimalisation and SEO

--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -1,7 +1,7 @@
     <div class="row">
       <div class="col-1"></div>
       <div class="col-10">
-        <h2 class="col-12">Contact me</h2>
+        <h1 class="col-12">Contacteer mij</h1>
         <div class="col-12">
           <form class="col-6">
             <label class="col-12">Name</label>
@@ -22,14 +22,16 @@
           </form>
 
           <div class="col-6">
-            <img src="file/contact-icon.png" class="col-2">
-            <ul class="col-12">
-              <li>Peter Romijn</li>
-              <li>Born: 07-22-1998</li>
-              <li>City: Tiel</li>
-              <li>Country: The Netherlands</li>
-              <li>Mail: <a href="mailto:peter@samebestdevelopment.nl">peter@samebestdevelopment.nl</a></li>
-            </ul>
+            <img src="file/contact-icon.png" alt="contact icon" class="col-2">
+            <address>
+              <h2>Contact gegevens</h2>
+              <ul class="col-12">
+                <li>Naam: Peter Romijn</li>
+                <li>Stad: Tiel</li>
+                <li>Land: The Netherlands</li>
+                <li>Email: <a href="mailto:peter@samebestdevelopment.nl">peter@samebestdevelopment.nl</a></li>
+              </ul>
+            </address>
           </div>
         </div>
       </div>
