--- a/AJAX/index-content.html
+++ b/AJAX/index-content.html
@@ -1,8 +1,10 @@
 <div class="row">
   <div class="col-4 col-m-3"></div>
-  <img class="col-4 col-m-6 round_picture" src="file/peter-romijn.jpeg" alt="">
+  <img class="col-4 col-m-6 round_picture" alt="Peter Romijn" src="file/peter-romijn.jpeg" alt="">
   <div class="col-4 col-m-3"></div>
 
-  <h1 class="col-12 center-text">Peter Romijn</h1>
+  <header>
+    <h1 class="col-12 center-text">Peter Romijn - portfolio</h1>
+  </header>
   <div style="padding: 0;" class="col-12 center-text"><div class="center-text col-12" id="text">&nbsp;</div><div id="blinker">&nbsp;</div></div>
 </div>
