--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -40,6 +40,7 @@
         </a>
         <div class="col-4 col-m-3"></div>
       </div>
+      <nav>
         <div id="nav" class="col-12">
             <ul id="width-ul">
                 <li><a href="#">Home</a></li>
@@ -49,6 +50,7 @@
                 <li><a target="_blank" class="githubLink" href="https://github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
         </div>
+      </nav>
 
         <div id="loader" style="display: none;" class="sk-fading-circle">
           <div class="sk-circle1 sk-circle"></div>
@@ -67,7 +69,9 @@
 
       <div id="content">
       </div>
-      <div id="footer" class="footer">Portfolio - Peter Romijn &copy;</div>
+      <footer>
+        <div id="footer" class="footer"><h4>Portfolio - Peter Romijn &copy;</h4></div>
+      </footer>
     </div>
   </body>
 
