--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,119 +1,165 @@
         <!-- Start projects -->
         <div class="row">
+          <sections>
+          <h1 class="center-text">Projects</h1>
           <div class="col-1"></div>
-            <article class="col-10">
+            <div class="col-10">
+              <article>
               <!-- Contains one project -->
-              <h2 class="col-12">Toko Bandung</h2>
-              <div class="col-m-3 col-0"></div>
-              <img src="file/tokobandung-site.png" class="col-4 col-m-6"/>
-              <div class="col-m-3 col-0"></div>
-              <h3 class="col-7">Website</h3>
-              <div class="col-7"><p>
+              <header>
+                <h2 class="col-12">Toko Bandung</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/tokobandung-site.png" alt="Tokobandung website" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-7">Web development</h3>
+              </header>
+              <div class="col-7">
+                <p>
                 Toko Bandung is een oud bedrijf dat sinds 1976 bestaat in Amsterdam-West.
                 Het bedrijf is in 2016 overgenomen. De nieuwe eigenaren wilden een nieuwe website.
                 De oude website was verouderd en had geen mobiel design of was mobile-first gebouwd.
                 <br />
                 De nieuwe website moest de kleuren van hun logo hebben en overzichtelijk zijn.
+                </p>
                 <br />
                 <br />
-                <ul>
-                  <li>Project naam: Toko Bandung website</li>
-                  <li>Opdrachtgever: Toko Bandung</li>
-                  <li>Rol: head of development</li>
-                </ul>
-                <br />
-                <br />
-                <a href="http://tokobandung.nl">tokobandung.nl</a>
-              </p></div>
-            </article>
+                <details>
+                  <ul>
+                    <li>Project naam: Toko Bandung website</li>
+                    <li>Opdrachtgever: Toko Bandung</li>
+                    <li>Rol: head of development</li>
+                    <li>Teamgrootte: 1</li>
+                    <li>Programmeertalen: HTML / CSS</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a href="http://tokobandung.nl">tokobandung.nl</a>
+                </details>
+              </div>
+              </article>
+            </div>
           <div class="col-1"></div>
         </div>
         <div class="row">
           <div class="col-1"></div>
-            <article class="col-10">
+            <div class="col-10">
+              <article>
               <!-- Contains one project -->
-              <h2 class="col-12">SameBestSignage</h2>
-              <div class="col-m-3 col-0"></div>
-              <img style="background-color: black;" src="file/samebestsignage.png" class="col-4 col-m-6"/>
-              <div class="col-m-3 col-0"></div>
-              <h3 class="col-7">Ticket system</h3>
-              <div class="col-7"><p>SameBestSignage is gebouwd toen ik stage liep bij <a href="http://digi-menu.nl">Digi Menu</a>
-                Bij Digi Menu liep ik stage als developer.<br />
-                Tijdens mijn stage vertelde mijn stage begeleider aan mij dat er vaak support problemen/tickets kwijt raakten.
-                Toen hij mij dat vertelde, legte ik het idee voor om een ticket systeem te programmeren. Met het ticket systeem kan je een ticket opnaam zetten,
-                documenteren wat je gedaan hebt, contact gegevens van bedrijven noteren en de status bij houden van een ticket.
+              <header>
+                <h2 class="col-12">SameBestSignage</h2>
+                <div class="col-m-3 col-0"></div>
+                <img style="background-color: black;" src="file/samebestsignage.png" alt="IDSignage logo" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-7">Service desk - development</h3>
+              </header>
+              <div class="col-7">
+                  <p>SameBestSignage is gebouwd toen ik stage liep bij <a href="http://digi-menu.nl">Digi Menu</a>
+                  Bij Digi Menu liep ik stage als developer.<br />
+                  Tijdens mijn stage vertelde mijn stage begeleider aan mij dat er vaak support problemen/tickets kwijt raakten.
+                  Toen hij mij dat vertelde, legte ik het idee voor om een ticket systeem te programmeren. Met het ticket systeem kan je een ticket opnaam zetten,
+                  documenteren wat je gedaan hebt, contact gegevens van bedrijven noteren en de status bij houden van een ticket.
+                </p>
                 <br />
                 <br />
-                <ul>
-                  <li>Project naam: SameBestSignage</li>
-                  <li>Opdrachtgever: Digi Menu</li>
-                  <li>Rol: head of development</li>
-                </ul>
-              </p></div>
-            </article>
-          <div class="col-1"></div>
-        </div>
-
-        <div class="row">
-          <div class="col-1"></div>
-            <article class="col-10">
-              <!-- Contains one project -->
-              <h2 class="col-12">Vulto Recherche</h2>
-              <div class="col-m-3 col-0"></div>
-              <img src="file/vulto.png" class="col-4 col-m-6"/>
-              <div class="col-m-3 col-0"></div>
-              <h3 class="col-7">Website</h3>
-              <div class="col-7"><p>
-                Vulto Recherche een recherche bureau uit Deil had een website die niet was gemaakt voor mobiel. De eigenaar van Vulto Recherche vond ook dat het tijd was voor een nieuwe website.
-                De website moest ook herkenbaar zijn voor zijn klanten.
-                <br />
-                <br />
-                <ul>
-                  <li>Project naam: Vulto Recherche website</li>
-                  <li>Opdrachtgever: Vulto Recherche</li>
-                  <li>Rol: head of development</li>
-                </ul>
-                <br />
-                <br />
-                <a target="_blank" href="http://vulto-recherche.nl">vulto-recherche.nl</a>
-              </p></div>
-            </article>
+                <details>
+                  <ul>
+                    <li>Project naam: SameBestSignage</li>
+                    <li>Opdrachtgever: Digi Menu</li>
+                    <li>Rol: head of development</li>
+                    <li>Teamgrootte: 2</li>
+                    <li>Programmeertalen: HTML, CSS, JavaScript, PHP</li>
+                  </ul>
+                </details>
+              </div>
+              </article>
+            </div>
           <div class="col-1"></div>
         </div>
 
         <div class="row">
           <div class="col-1"></div>
-            <article class="col-10">
+            <div class="col-10">
               <!-- Contains one project -->
-              <h2 class="col-12">Bee Academy</h2>
-              <div class="col-m-3 col-0"></div>
-              <img src="file/beeacademy.png" class="col-4 col-m-6"/>
-              <div class="col-m-3 col-0"></div>
-              <h3 class="col-7">Website</h3>
-              <div class="col-7"><p>
+              <article>
+              <header>
+                <h2 class="col-12">Vulto Recherche</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/vulto.png" alt="Vulto Recherche website" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-7">Web development</h3>
+              </header>
+              <div class="col-7">
+                <p>
+                  Vulto Recherche een recherche bureau uit Deil had een website die niet was gemaakt voor mobiel. De eigenaar van Vulto Recherche vond ook dat het tijd was voor een nieuwe website.
+                  De website moest ook herkenbaar zijn voor zijn klanten.
+                </p>
+                <br />
+                <br />
+                <details>
+                  <ul>
+                    <li>Project naam: Vulto Recherche website</li>
+                    <li>Opdrachtgever: Vulto Recherche</li>
+                    <li>Rol: head of development</li>
+                    <li>Teamgrootte: 1</li>
+                    <li>Programmeertalen: HTML / CSS</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="http://vulto-recherche.nl">vulto-recherche.nl</a>
+                </details>
+              </div>
+              </article>
+            </div>
+          <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <article>
+              <header>
+                <h2 class="col-12">Bee Academy</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/beeacademy.png" alt="Bee Academy website" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-7">Web development</h3>
+              </header>
+              <div class="col-7">
+                <p>
                 Bee Academy is een online marketing trainings bureau. Bee Academy had een wordpress template gekocht zodat een stagair er verder de website mee kon gaan bouwen.
                 Voor dat de website af was, had de stagair zijn uren erop zitten.
                 <br />
                 Ik heb het template op de schopgenomen, de style is compleet aangepast. Daarnaast heb ik ook de invulling (plaatjes en layout) op de website geplaatst.
+                </p>
                 <br />
                 <br />
-                <ul>
-                  <li>Project naam: Bee Academy website</li>
-                  <li>Opdrachtgever: Bee Academy</li>
-                  <li>Rol: head of development</li>
-                </ul>
-                <br />
-                <br />
-                <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
-              </p></div>
-            </article>
+                <details>
+                  <ul>
+                    <li>Project naam: Bee Academy website</li>
+                    <li>Opdrachtgever: Bee Academy</li>
+                    <li>Rol: head of development</li>
+                    <li>Teamgrootte: 3</li>
+                    <li>Programmeertalen: HTML / CSS / Javascript</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
+                </details>
+              </div>
+              </article>
+            </div>
           <div class="col-1"></div>
         </div>
+      </sections>
         <!-- End projects -->
 
         <!-- Start experiments -->
         <div class="row">
-          <h2 class="col-12 center-text">Mijn experimenten</h2>
+          <sections>
+          <header>
+            <h1 class="col-12 center-text">Mijn experimenten</h1>
+          </header>
           <div class="col-3 col-m-0">
             &nbsp;
             <!-- <div class="col-m-3 col-0"></div>
@@ -127,11 +173,13 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <img src="file/wordpress-sbd.png" class="col-12 col-m-6">
+            <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text"><h3>Wordpress theme</h3></div>
+            <header>
+              <div class="col-12 center-text"><h2>Wordpress theme</h2></div>
+            </header>
             <div class="col-m-3 col-0"></div>
-            <p class="col-12">Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</p>
+            <p class="col-12"><details>Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</details></p>
             <div class="col-m-3 col-0"></div>
             <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://wordpress.samebestdevelopment.nl">Site</a></button>
             <div class="col-m-3 col-0"></div>
@@ -141,7 +189,9 @@
             <div class="col-m-3 col-0"></div>
             <img src="file/type.gif" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text"><h3>Type project</h3></div>
+            <header>
+              <div class="col-12 center-text"><h2>Type project</h2></div>
+            </header>
             <div class="col-m-3 col-0"></div>
             <p class="col-12">Een javascript applicatie die automatisch typt.</p>
             <div class="col-m-3 col-0"></div>
@@ -160,5 +210,6 @@
             <div class="col-m-3 col-0"></div> -->
           </div>
         </div>
+        </sections>
         <!-- End experiments -->
         <div class="col-1"></div>
