--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -4,7 +4,7 @@
   <div class="col-10">
     <div class="row">
       <div class="col-4"></div>
-        <img src="file/peter-romijn.jpeg" class="col-4">
+        <img src="file/peter-romijn.jpeg" alt="Peter Romijn" class="col-4">
       <div class="col-4"></div>
     </div>
 
@@ -33,7 +33,7 @@
 
     <div class="row">
       <div class="col-2"></div>
-      <img class="col-8" src="file/logo.png">
+      <img class="col-8" alt="samebestdevelopment logo" src="file/samebestdevelopment-logo.png">
       <div class="col-2"></div>
     </div>
     <div class="row">
