--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -7,11 +7,13 @@
         <img src="file/peter-romijn.jpeg" alt="Peter Romijn" class="col-4">
       <div class="col-4"></div>
     </div>
-
     <div class="row">
+
+      <h1 class="center-text">Over mij</h1>
+
       <div class="col-2"></div>
       <div class="col-8">
-        <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling. En werkzaam bij BeeInteractive.</strong>
+        <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling. En werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.</strong>
           <br />
           <br />
           Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Dat is hoe ouder ik werd hoe groter mijn intresse werd. Toen ik op de middelbare school (De Lingeborgh) begonnen was wist ik vrijwel zeker wat ik wilde worden, Webdeveloper!
@@ -24,7 +26,10 @@
             <li>SQL</li>
           </ul>
           <br />
-          In het Datacentrum te Haarlem heb ik een hobby server waar ik mee experimenteer.
+          Naast mijn programmeer experimenten, heb ik ook een experimenteer server. Deze server staat in een datacentrum te Haarlem.
+          <br>
+          <br>
+          Wilt u mijn CV?
           <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download CV</a>
         </p>
       </div>
@@ -39,12 +44,15 @@
     <div class="row">
       <div class="col-2"></div>
       <div class="col-8">
-        <p>SameBestDevelopment is mijn eigen bedrijf. SameBestDevelopment ontwikkeld websites en webapplicaties voor zijn opdrachtgevers.
-          De focus ligt altijd op snelle code die overzichtelijk is en dat het voor de klant het makkelijk is om zich een weg te kunnen vinden in het product.
-          <br />
-          <br />
-          <a href="#mywork">Mijn projecten</a>
-        </p>
+        <article>
+          <h2>SameBestDevelopment</h2>
+          <p>SameBestDevelopment is mijn eigen bedrijf. SameBestDevelopment ontwikkeld websites en webapplicaties voor zijn opdrachtgevers.
+            De focus ligt altijd op snelle code die overzichtelijk is en dat het voor de klant het makkelijk is om zich een weg te kunnen vinden in het product.
+            <br />
+            <br />
+            <a href="#mywork">Mijn projecten</a>
+          </p>
+        </article>
       </div>
       <div class="col-2"></div>
     </div>
