--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -23,7 +23,7 @@
                 </p>
                 <br />
                 <br />
-                <details>
+                <summary>
                   <ul>
                     <li>Project naam: Toko Bandung website</li>
                     <li>Opdrachtgever: Toko Bandung</li>
@@ -34,7 +34,7 @@
                   <br />
                   <br />
                   <a href="http://tokobandung.nl">tokobandung.nl</a>
-                </details>
+                </summary>
               </div>
               </article>
             </div>
@@ -61,7 +61,7 @@
                 </p>
                 <br />
                 <br />
-                <details>
+                <summary>
                   <ul>
                     <li>Project naam: SameBestSignage</li>
                     <li>Opdrachtgever: Digi Menu</li>
@@ -69,7 +69,7 @@
                     <li>Teamgrootte: 2</li>
                     <li>Programmeertalen: HTML, CSS, JavaScript, PHP</li>
                   </ul>
-                </details>
+                </summary>
               </div>
               </article>
             </div>
@@ -95,7 +95,7 @@
                 </p>
                 <br />
                 <br />
-                <details>
+                <summary>
                   <ul>
                     <li>Project naam: Vulto Recherche website</li>
                     <li>Opdrachtgever: Vulto Recherche</li>
@@ -106,7 +106,7 @@
                   <br />
                   <br />
                   <a target="_blank" href="http://vulto-recherche.nl">vulto-recherche.nl</a>
-                </details>
+                </summary>
               </div>
               </article>
             </div>
@@ -134,7 +134,7 @@
                 </p>
                 <br />
                 <br />
-                <details>
+                <summary>
                   <ul>
                     <li>Project naam: Bee Academy website</li>
                     <li>Opdrachtgever: Bee Academy</li>
@@ -145,7 +145,7 @@
                   <br />
                   <br />
                   <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
-                </details>
+                </summary>
               </div>
               </article>
             </div>
@@ -179,7 +179,7 @@
               <div class="col-12 center-text"><h2>Wordpress theme</h2></div>
             </header>
             <div class="col-m-3 col-0"></div>
-            <p class="col-12"><details>Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</details></p>
+            <p class="col-12"><summary>Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</summary></p>
             <div class="col-m-3 col-0"></div>
             <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://wordpress.samebestdevelopment.nl">Site</a></button>
             <div class="col-m-3 col-0"></div>
