--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -36,7 +36,7 @@
       <div class="row">
         <div class="col-4 col-m-3"></div>
         <a href="#">
-          <img src="file/logo.png" class="col-4 col-m-6" />
+          <img src="file/samebestdevelopment-logo.png" alt="logo samebestdevelopment" class="col-4 col-m-6" />
         </a>
         <div class="col-4 col-m-3"></div>
       </div>
@@ -45,7 +45,7 @@
             <ul id="width-ul">
                 <li><a href="#">Home</a></li>
                 <li><a href="#aboutme">Over mij</a></li>
-                <li><a href="#mywork">Werk</a></li>
+                <li><a href="#mywork">Projecten</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a target="_blank" class="githubLink" href="https://github.com/peter-4A5A"><img style="width: 0.9em;" src="file/github.png"/></a></li>
             </ul>
@@ -67,10 +67,13 @@
           <div class="sk-circle12 sk-circle"></div>
         </div>
 
-      <div id="content">
-      </div>
+      <main>
+        <div id="content">
+        </div>
+      </main>
+
       <footer>
-        <div id="footer" class="footer"><h4>Portfolio - Peter Romijn &copy;</h4></div>
+        <div class="footer"><h4 id="footer">Portfolio - Peter Romijn &copy;</h4></div>
       </footer>
     </div>
   </body>
