--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -160,16 +160,19 @@
           <header>
             <h1 class="col-12 center-text">Mijn experimenten</h1>
           </header>
-          <div class="col-3 col-m-0">
-            &nbsp;
-            <!-- <div class="col-m-3 col-0"></div>
-            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+          <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text">Lorem Ipsum</div>
+            <img src="file/butter-cheese-and-eggs.jpg" alt="Boter, kaas en eieren" class="col-12 col-m-6">
             <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"></button>
-            <div class="col-m-3 col-0"></div> -->
-          </div>
+            <header>
+              <div class="col-12 center-text"><h2>Boter, kaas en eieren</h2></div>
+            </header>
+            <div class="col-m-3 col-0"></div>
+            <p class="col-12"><summary>Boter kaas en eieren, was een school opdracht om verder te leren met jQuery.</summary></p>
+            <div class="col-m-3 col-0"></div>
+            <a class="col-m-6 col-12" target="_blank" href="https://github.com/peter-4A5A/boter-kaas-en-eieren">Github</a>
+            <div class="col-m-3 col-0"></div>
+          </article>
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
@@ -181,7 +184,7 @@
             <div class="col-m-3 col-0"></div>
             <p class="col-12"><summary>Het thema van de samebestdevelopment website gemaakt in een Wordpress thema.</summary></p>
             <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://wordpress.samebestdevelopment.nl">Site</a></button>
+            <a class="col-m-6 col-12" target="_blank" href="https://github.com/peter-4A5A/SameBestDevelopment-wordpress-theme">Github</a>
             <div class="col-m-3 col-0"></div>
           </article>
 
@@ -193,9 +196,9 @@
               <div class="col-12 center-text"><h2>Type project</h2></div>
             </header>
             <div class="col-m-3 col-0"></div>
-            <p class="col-12">Een javascript applicatie die automatisch typt.</p>
+            <p class="col-12"><summary>Een javascript applicatie die automatisch typt.</summary></p>
             <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"><a target="_blank" href="http://typer.samebestdevelopment.nl">Bekijk het project</a></button>
+            <a class="col-m-6 col-12" target="_blank" href="http://typer.samebestdevelopment.nl">Bekijk het project</a>
             <div class="col-m-3 col-0"></div>
           </article>
 
