Changed style and some text

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,7 +1,7 @@
         <!-- Start projects -->
         <div class="row">
           <sections>
-          <h1 class="center-text">Projects</h1>
+          <h1 class="center-text">Projecten</h1>
           <div class="col-1"></div>
             <div class="col-10">
               <article>
@@ -17,7 +17,7 @@
                 <p>
                 Toko Bandung is een oud bedrijf dat sinds 1976 bestaat in Amsterdam-West.
                 Het bedrijf is in 2016 overgenomen. De nieuwe eigenaren wilden een nieuwe website.
-                De oude website was verouderd en had geen mobiel design of was mobile-first gebouwd.
+                De oude website was verouderd en had geen mobiel design.
                 <br />
                 De nieuwe website moest de kleuren van hun logo hebben en overzichtelijk zijn.
                 </p>
@@ -67,7 +67,7 @@
                     <li>Opdrachtgever: Digi Menu</li>
                     <li>Rol: head of development</li>
                     <li>Teamgrootte: 2</li>
-                    <li>Programmeertalen: HTML, CSS, JavaScript, PHP</li>
+                    <li>Programmeertalen: HTML, CSS, JavaScript, PHP en SQL</li>
                   </ul>
                 </summary>
               </div>
