Changed the text

--- a/AJAX/aboutme.html
+++ b/AJAX/aboutme.html
@@ -16,21 +16,35 @@
         <p><strong>Mijn naam is Peter Romijn, woonachtig in Tiel en geboren op: 22 juli 1998. Ik ben student bij ROC Midden Nederland als Applicatie- en mediaontwikkeling. En werkzaam bij <a target="_blank" href="http://beeinteractive.nl">BeeInteractive</a>.</strong>
           <br />
           <br />
-          Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Dat is hoe ouder ik werd hoe groter mijn intresse werd. Toen ik op de middelbare school (De Lingeborgh) begonnen was wist ik vrijwel zeker wat ik wilde worden, Webdeveloper!
-          Nadat ik mijn TL diploma had gehaald, heb ik me ingeschreven als student aan het ROC Midden Nederland als applicatie- en mediaontwikkeling. Waar ik nu met plezier programmeertalen leer zoals:
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript: vanilla / jQuery</li>
-            <li>PHP</li>
-            <li>SQL</li>
+          Al op jonge leeftijd (4 jaar) had ik al intresse in de computer. Toen ik 4 was, was mijn moeder verbaast dat ik een spelletje kon installeren.
+          Ze dacht dat het eigenlijk gewoon was dat iemand van 4 dat kon,
+          totdat mijn moeder het tegen andere ouders vertelde. Kwam mijn moeder erachter dat het uniek is dat kinderen dat kunnen. En zo bleef ik mij ontwikkelen.
+          Op mijn 6de begon ik met het branden van spelletjes op CD's, weer een grote stap als een "klein" kind om een ICT'er te worden.
+          <br />
+          Op mijn 10de begon ik met het hosten van mijn eigen MineCraft servers te hosten! En zo heb ik toen uiteindelijk SameBestServer gestart!
+          Een hobby project om een minecraft server te maken! Onder SameBestServer heb ik vele servers gemaakt (MineZ, survival, minigames, pretpark, Survivalen met een storyline en LingeCraft).
+          <br />
+          Toen ik steeds verder groeide in mijn ICT kennis en ik ongeveer 13 jaar was had ik mijn eerste Wordpress website gemaakt. Deze website was om te testen wat ik allemaal met Wordpress kon doen.
+          En dat was een hele hoop zonder dat ik veel kennis had kwam ik aardig uit te voeten.
+          Zo bleef ik groeien ook op de middelbare school. En kreeg ik basis kennis van programmeren. Daar wilde ik mee verder groeien en koos ik voor de opleiding: applicatie- en mediaontwikkeling
+          op het ROC Midden Nederland
+          <br>
+          Op school krijg ik les in de volgende talen
+          <ul class="tab">
+            <li>  HTML</li>
+            <li>  CSS</li>
+            <li>  JavaScript: vanilla / jQuery</li>
+            <li>  PHP</li>
+            <li>  SQL</li>
           </ul>
           <br />
-          Naast mijn programmeer experimenten, heb ik ook een experimenteer server. Deze server staat in een datacentrum te Haarlem.
+          In 2016 kreeg ik de kans om bij BeeInteractive mijn eigen server in het datacentrum te laten plaatsen! Over de kans heb ik geen
+          gras laten groeien en ik pakte de kans gelijk met beide handen aan. Daardoor heb ik nu mijn eigen server in het datacentrum.
+          Op deze server experimenteer ik nog steeds met MineCraft, websites en vele andere mini projectjes.
           <br>
           <br>
-          Wilt u mijn CV?
-          <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download CV</a>
+          Wilt u algemene informatie over mij?
+          <a target="_blank" href="file/CV-Peter-Romijn.pdf">Download hier mijn CV</a>
         </p>
       </div>
       <div class="col-2"></div>
@@ -46,11 +60,13 @@
       <div class="col-8">
         <article>
           <h2>SameBestDevelopment</h2>
-          <p>SameBestDevelopment is mijn eigen bedrijf. SameBestDevelopment ontwikkeld websites en webapplicaties voor zijn opdrachtgevers.
-            De focus ligt altijd op snelle code die overzichtelijk is en dat het voor de klant het makkelijk is om zich een weg te kunnen vinden in het product.
+          <p>
+            SameBestDevelopment is mijn eigen bedrijf. Ik ben dit bedrijf begonnen om mij te ontwikkelen binnen het bedrijfsleven.
+            Hoe ik opdrachten binnen haal, klanten tevreden houd en opdrachten oplever. Ik heb mijn focus altijd op de klant en het product wat ik ontwikkel van de klant.
+            Tijdens een opdracht is mijn doelstelling om de verwachtingen van de opdrachtgever te overtreffen.
             <br />
             <br />
-            <a href="#mywork">Mijn projecten</a>
+            Bent u benieuwd wat ik voor mijn opdrachtgevers heb gemaakt? Bekijk <a href="#mywork">mijn projecten</a> eens.
           </p>
         </article>
       </div>
