changed the way how the style is loaded

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -30,6 +30,9 @@
   <link rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128" />
 
+  <link rel="stylesheet" href="style/grid.css" type="text/css">
+  <link rel="stylesheet" href="style/style.css" type="text/css">
+
   </head>
   <body onhashchange="deepLink();" onload='deepLink(); showYear();' class="background_home">
     <div class="wrapper">
@@ -77,9 +80,6 @@
       </footer>
     </div>
   </body>
-
-  <link rel="stylesheet" href="style/grid.css" type="text/css" async>
-  <link rel="stylesheet" href="style/style.css" type="text/css" async>
 
   <script src="js/typer.js" async></script>
   <script src="js/main.js" async></script>
