corrected some minor errors

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -11,9 +11,9 @@
                 <div class="col-m-3 col-0"></div>
                 <img src="file/tokobandung-site.png" alt="Tokobandung website" class="col-4 col-m-6"/>
                 <div class="col-m-3 col-0"></div>
-                <h3 class="col-7">Web development</h3>
+                <h3 class="col-8">Web development</h3>
               </header>
-              <div class="col-7">
+              <div class="col-8">
                 <p>
                 Toko Bandung is een oud bedrijf dat sinds 1976 bestaat in Amsterdam-West.
                 Het bedrijf is in 2016 overgenomen. De nieuwe eigenaren wilden een nieuwe website.
@@ -29,11 +29,12 @@
                     <li>Opdrachtgever: Toko Bandung</li>
                     <li>Rol: head of development</li>
                     <li>Teamgrootte: 1</li>
+                    <li>CMS: Wordpress</li>
                     <li>Programmeertalen: HTML / CSS</li>
                   </ul>
                   <br />
                   <br />
-                  <a href="http://tokobandung.nl">tokobandung.nl</a>
+                  <a target="_blank" href="http://tokobandung.nl">tokobandung.nl</a>
                 </summary>
               </div>
               </article>
@@ -50,9 +51,9 @@
                 <div class="col-m-3 col-0"></div>
                 <img style="background-color: black;" src="file/samebestsignage.png" alt="IDSignage logo" class="col-4 col-m-6"/>
                 <div class="col-m-3 col-0"></div>
-                <h3 class="col-7">Service desk - development</h3>
+                <h3 class="col-8">Service desk - development</h3>
               </header>
-              <div class="col-7">
+              <div class="col-8">
                   <p>SameBestSignage is gebouwd toen ik stage liep bij <a href="http://digi-menu.nl">Digi Menu</a>
                   Bij Digi Menu liep ik stage als developer.<br />
                   Tijdens mijn stage vertelde mijn stage begeleider aan mij dat er vaak support problemen/tickets kwijt raakten.
@@ -86,9 +87,9 @@
                 <div class="col-m-3 col-0"></div>
                 <img src="file/vulto.png" alt="Vulto Recherche website" class="col-4 col-m-6"/>
                 <div class="col-m-3 col-0"></div>
-                <h3 class="col-7">Web development</h3>
+                <h3 class="col-8">Web development</h3>
               </header>
-              <div class="col-7">
+              <div class="col-8">
                 <p>
                   Vulto Recherche een recherche bureau uit Deil had een website die niet was gemaakt voor mobiel. De eigenaar van Vulto Recherche vond ook dat het tijd was voor een nieuwe website.
                   De website moest ook herkenbaar zijn voor zijn klanten.
@@ -101,6 +102,7 @@
                     <li>Opdrachtgever: Vulto Recherche</li>
                     <li>Rol: head of development</li>
                     <li>Teamgrootte: 1</li>
+                    <li>CMS: Wordpress</li>
                     <li>Programmeertalen: HTML / CSS</li>
                   </ul>
                   <br />
@@ -123,9 +125,9 @@
                 <div class="col-m-3 col-0"></div>
                 <img src="file/beeacademy.png" alt="Bee Academy website" class="col-4 col-m-6"/>
                 <div class="col-m-3 col-0"></div>
-                <h3 class="col-7">Web development</h3>
+                <h3 class="col-8">Web development</h3>
               </header>
-              <div class="col-7">
+              <div class="col-8">
                 <p>
                 Bee Academy is een online marketing trainings bureau. Bee Academy had een wordpress template gekocht zodat een stagair er verder de website mee kon gaan bouwen.
                 Voor dat de website af was, had de stagair zijn uren erop zitten.
@@ -140,11 +142,46 @@
                     <li>Opdrachtgever: Bee Academy</li>
                     <li>Rol: head of development</li>
                     <li>Teamgrootte: 3</li>
+                    <li>CMS: Wordpress</li>
                     <li>Programmeertalen: HTML / CSS / Javascript</li>
                   </ul>
                   <br />
                   <br />
                   <a target="_blank" href="https://beeacademy.nl">beeacademy.nl</a>
+                </summary>
+              </div>
+              </article>
+            </div>
+          <div class="col-1"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-1"></div>
+            <div class="col-10">
+              <!-- Contains one project -->
+              <article>
+              <header>
+                <h2 class="col-12">Toegangs pas</h2>
+                <div class="col-m-3 col-0"></div>
+                <img src="file/toegangspas.png" alt="Toegangs pas opdracht" class="col-4 col-m-6"/>
+                <div class="col-m-3 col-0"></div>
+                <h3 class="col-8">School opdracht</h3>
+              </header>
+              <div class="col-8">
+                <p>
+                  Ik kreeg de opdracht van mijn docent om een toegangspas na te maken. Deze toegangspas moest op elk device er goed uitzien.
+                </p>
+                <br />
+                <br />
+                <summary>
+                  <ul>
+                    <li>Schoolopdracht: Toegangspas</li>
+                    <li>Docent: Dunk</li>
+                    <li>Programmeertalen: HTML / CSS</li>
+                  </ul>
+                  <br />
+                  <br />
+                  <a target="_blank" href="http://toegangspas.samebestdevelopment.nl">De toegangspas</a>
                 </summary>
               </div>
               </article>
