--- a/AJAX/contact.html
+++ b/AJAX/contact.html
@@ -4,15 +4,15 @@
         <h1 class="col-12">Contacteer mij</h1>
         <div class="col-12">
           <form class="col-6">
-            <label class="col-12">Name</label>
+            <label class="col-12">Uw naam</label>
               <input type="text" id='nameSender' class="col-12"/>
-            <label class="col-12">Email</label>
+            <label class="col-12">Uw email</label>
             <input type="text" id='emailSender' class="col-12"/>
 
-            <label class="col-12">Subject</label>
+            <label class="col-12">Onderwerp</label>
             <input type="text" id='subject' class="col-12"/>
 
-            <label class="col-12">Message</label>
+            <label class="col-12">Uw bericht</label>
             <textarea id='message' class="col-12"></textarea>
 
             <button type="button" class="div_button col-4 col-m-5" onclick="sendMail();">Versturen</button>
@@ -27,7 +27,7 @@
               <ul class="col-12">
                 <li>Naam: Peter Romijn</li>
                 <li>Stad: Tiel</li>
-                <li>Land: The Netherlands</li>
+                <li>Land: Nederland</li>
                 <li>Email: <a href="mailto:peter@samebestdevelopment.nl">peter@samebestdevelopment.nl</a></li>
               </ul>
             </address>
