Added new work and experiments

--- a/AJAX/mywork.html
+++ b/AJAX/mywork.html
@@ -1,7 +1,7 @@
         <!-- Start projects -->
         <div class="row">
           <sections>
-          <h1 class="center-text">Projecten</h1>
+          <h1 class="col-12 center-text">Projecten</h1>
           <div class="col-1"></div>
             <div class="col-10">
               <article>
@@ -154,7 +154,10 @@
             </div>
           <div class="col-1"></div>
         </div>
+        <!-- End projects -->
 
+
+        <h1 class="col-12 center-text">School opdrachten</h1>
         <div class="row">
           <div class="col-1"></div>
             <div class="col-10">
@@ -189,7 +192,7 @@
           <div class="col-1"></div>
         </div>
       </sections>
-        <!-- End projects -->
+
 
         <!-- Start experiments -->
         <div class="row">
@@ -199,7 +202,9 @@
           </header>
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <img src="file/butter-cheese-and-eggs.jpg" alt="Boter, kaas en eieren" class="col-12 col-m-6">
+            <div class="col-12 col-m-6">
+              <img src="file/butter-cheese-and-eggs.jpg" alt="Boter, kaas en eieren" class="experimentHeight">
+            </div>
             <div class="col-m-3 col-0"></div>
             <header>
               <div class="col-12 center-text"><h2>Boter, kaas en eieren</h2></div>
@@ -213,7 +218,9 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="col-12 col-m-6">
+            <div class="col-12 col-m-6">
+              <img src="file/wordpress-sbd.png" alt="SameBestDevelopment thema in wordpress" class="experimentHeight">
+            </div>
             <div class="col-m-3 col-0"></div>
             <header>
               <div class="col-12 center-text"><h2>Wordpress theme</h2></div>
@@ -227,7 +234,9 @@
 
           <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <img src="file/type.gif" class="col-12 col-m-6">
+            <div class="col-12 col-m-6">
+              <img src="file/type.gif" class="experimentHeight">
+            </div>
             <div class="col-m-3 col-0"></div>
             <header>
               <div class="col-12 center-text"><h2>Type project</h2></div>
@@ -239,16 +248,21 @@
             <div class="col-m-3 col-0"></div>
           </article>
 
-          <div class="col-3 col-m-0">
-            &nbsp;
-            <!-- <div class="col-m-3 col-0"></div>
-            <img src="http://placehold.it/256x256" class="col-12 col-m-6">
+          <article class="col-3 col-m-6 project">
             <div class="col-m-3 col-0"></div>
-            <div class="col-12 center-text">Lorem Ipsum</div>
+            <div class="col-12 col-m-6">
+              <img src="file/js.png" class="experimentHeight">
+            </div>
             <div class="col-m-3 col-0"></div>
-            <button type="button" class="col-m-6 col-12"></button>
-            <div class="col-m-3 col-0"></div> -->
-          </div>
+            <header>
+              <div class="col-12 center-text"><h2>Create field</h2></div>
+            </header>
+            <div class="col-m-3 col-0"></div>
+            <p class="col-12"><summary>Een javascript experiment die de style aanpast van een element.</summary></p>
+            <div class="col-m-3 col-0"></div>
+            <a class="col-m-6 col-12" target="_blank" href="http://create-field.samebestdevelopment.nl">Bekijk het project</a>
+            <div class="col-m-3 col-0"></div>
+          </article>
         </div>
         </sections>
         <!-- End experiments -->
